--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Learning GIT is Exciting</h1>
+        <h1 style="color: aqua;">Learning GIT is Exciting</h1>
     </body>
 
 
